[gd_scene load_steps=8 format=3 uid="uid://cyi5dg8qskhuo"]

[ext_resource type="Script" path="res://level.gd" id="1_2dc70"]
[ext_resource type="TileSet" uid="uid://bbykwo35isbtl" path="res://Resources/tiles.tres" id="2_q7gw8"]
[ext_resource type="Script" path="res://entities.gd" id="3_me6d7"]
[ext_resource type="PackedScene" uid="uid://bu03m6i3nfgh3" path="res://player.tscn" id="4_od52n"]
[ext_resource type="PackedScene" uid="uid://cah78mxrg68st" path="res://basic_cube.tscn" id="4_y04cv"]
[ext_resource type="PackedScene" uid="uid://bfwm4nco50s53" path="res://linked_cube.tscn" id="5_2wx40"]
[ext_resource type="Texture2D" uid="uid://c8o30t1vqqgp7" path="res://Text/Next_Level_Prompt.png" id="5_bbq3r"]

[node name="Level" type="Node2D"]
script = ExtResource("1_2dc70")
level_id = 2
level_name = "DoubledTrouble"

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_q7gw8")
format = 2
layer_0/tile_data = PackedInt32Array(-65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -65538, 0, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -131068, 0, 0, -131069, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, 4, 0, 0, 3, 0, 0, 2, 0, 0, 1, 0, 0, 0, 0, 0, 65535, 0, 0, 65534, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, -262146, 0, 1, -196610, 0, 0, 196606, 0, 0, 262142, 0, 0, -262145, 0, 1, -196609, 0, 0, 196607, 65536, 0, 262143, 0, 0, -327680, 0, 1, -262144, 0, 0, 131072, 0, 0, 196608, 0, 0, -327679, 0, 1, -262143, 0, 0, 131073, 0, 0, 196609, 0, 0, -327678, 0, 1, -262142, 0, 0, 131074, 0, 0, 196610, 0, 0, -327677, 0, 1, -262141, 0, 0, 131075, 0, 0, 196611, 0, 0, -327676, 0, 1, -262140, 0, 0, 131076, 0, 0, 196612, 0, 0, -327675, 0, 1, -262139, 0, 1, -196603, 0, 1, -131067, 0, 1, -65531, 0, 1, 5, 0, 1, 65541, 0, 1, 131077, 0, 1, 196613, 0, 1, 262149, 0, 1, 262148, 0, 1, 262147, 0, 1, 262146, 0, 1, 262145, 0, 1, 262144, 0, 1, 327679, 0, 1, 327678, 0, 1, 327677, 0, 1, 262141, 0, 1, 196605, 0, 1, 131069, 0, 1, 65533, 0, 1, -3, 0, 1, -65539, 0, 1, -131075, 0, 1, -196611, 0, 1, -262147, 0, 1)

[node name="entities" type="Node2D" parent="."]
script = ExtResource("3_me6d7")

[node name="player" parent="entities" instance=ExtResource("4_od52n")]
unique_name_in_owner = true
position = Vector2(56, -56)

[node name="other_cubes" type="Node2D" parent="entities"]

[node name="BasicCube" parent="entities/other_cubes" instance=ExtResource("4_y04cv")]
position = Vector2(56, 24)

[node name="linked_cubes" type="Node2D" parent="entities"]

[node name="LinkedCube" parent="entities/linked_cubes" instance=ExtResource("5_2wx40")]
position = Vector2(-8, -24)
is_goal_cube = true

[node name="LinkedCube2" parent="entities/linked_cubes" instance=ExtResource("5_2wx40")]
position = Vector2(56, -24)

[node name="inverted_cubes" type="Node2D" parent="entities"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(24, 24)
zoom = Vector2(1.165, 1.165)

[node name="NextLevelPrompt" type="Sprite2D" parent="."]
visible = false
position = Vector2(24, 104)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_bbq3r")
